# ood

./: .gitignore  .travis.yml  00_introduction.tex  01_buildsystem.tex  02_ood_basics.tex  03_ood_pattern.tex  04_cpp.tex  05_cpp_and_c.tex  06_standards.tex  07_cleancode.tex  08_testing.tex  CMakeLists.txt  UseLATEX.cmake  header.tex  script.bib  script.tex  tempPartial00000.tex
lst/: AutoType.cpp  CMakeLists.txt  DefaultValue.cpp  Function.cpp  SimpleString.cpp  open_recursion.cpp  singleton.cpp
